# django-simple-api

./: .gitignore  README.md  README.zh-CN.md  README_EN.md  README_ZH.md  mkdocs.yml  pyproject.toml  pytest.ini  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: setup.yml  test.yml
django_simple_api/: __init__.py  _fields.py  apps.py  decorators.py  exceptions.py  extras.py  field_functions.py  fields.py  functional.py  middleware.py  models.py  params.py  response.py  restful.py  schema.py  serialize.py  types.py  typing.py  urls.py  utils.py  views.py
django_simple_api/templates/: redoc.html  swagger.html
docs/: declare-parameters.md  document-generation.md  extensions-function.md  index.md  parameter-verification.md  quick-start.md
docs_en/: document-generation.md  index.md  quick-start.md
docs_zh/: declare-parameters.md  document-generation.md  extensions-function.md  index.md  parameter-verification.md
example/: __init__.py  models.py  settings.py  tests.py  urls.py  views.py
script/: docs.py  test.py  upload.py
static/django_simple_api/: swagger-ui.css
tests/: __init__.py  test_utils.py  tests.py  urls.py  views.py
tests/testcases/: 洛神赋.md
tests/testcases/pytest_cases/: test_utils.py
tests/testcases/unittest_cases/: test_serialize.py  tests.py
tests/tests/: test_parameter_declare.py  test_serialize.py  test_utils.py  tests.py
