[tool.poetry]
authors = ["abersheeran <me@abersheeran.com>"]
description = ""
license = "MIT"
name = "django-simple-api"
readme = "README.md"
version = "0.1.0"

homepage = "https://github.com/abersheeran/django-simple-api"
repository = "https://github.com/abersheeran/django-simple-api"

classifiers = [
  "Programming Language :: Python :: 3",
]

packages = [
  {include = "django_simple_api"},
]

[tool.poetry.dependencies]
python = "^3.6"

django = "*"
pydantic = "^1.7.3"
only-pipe = "^2.0.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
mypy = "*"
flake8 = "*"
pytest = "^5.4.3"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
