[tool.poetry]
authors = ["abersheeran <me@abersheeran.com>"]
description = "A non-intrusive component that can help you quickly create APIs."
license = "MIT"
name = "django-simple-api"
readme = "README.md"
version = "0.1.0"

homepage = "https://github.com/abersheeran/django-simple-api"
repository = "https://github.com/abersheeran/django-simple-api"

classifiers = [
  "Programming Language :: Python :: 3",
]

packages = [
  {include = "django_simple_api"},
]

[tool.poetry.dependencies]
python = "^3.7"

django = "*"
pydantic = "^1.8.1"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
flake8 = "*"
mypy = "*"
pytest = "^5.4.3"

mkdocs = "*"
mkdocs-material = "*"

[tool.isort]
profile = "black"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
